# Telos

./: .gitignore  README.md  main.py  pyproject.toml
docs/: actuators.md  architecture.md  cognition.md  perception.md  protocol.md
telos/: __init__.py  agent.py  observation.py
telos/actuators/: base.py  primitives.py
telos/cognition/: engine.py
telos/memory/: memory.py
telos/perception/: manager.py  proprio.py  vision.py  voice.py
