[project]
name = "telos"
version = "0.1.0"
description = "Telos — A complete, low-compute robot agent system. Perception to action, all in one closed loop."
requires-python = ">=3.10"
dependencies = [
    "pydantic>=2.0",
    "httpx>=0.27",
    "numpy>=1.24",
    "pillow>=10.0",
    "pyserial>=3.5",
    "webrtcvad>=2.0",
    "edge-tts>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
